force-app/main/default/objects/Contact/fields/Form_Sent_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Sent to Partner?</label>
    <type>Checkbox</type>
</CustomField>