force-app/main/default/objects/Contact/fields/Is_KYC_Form_New__c.field-meta.xml
<CustomField>
    <fullName>Is_KYC_Form_New__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is KYC Form New?</label>
    <type>Checkbox</type>
</CustomField>