force-app/main/default/objects/Contact/fields/Last_KYC_Form_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Last_KYC_Form_Sent_On__c</fullName>
    <label>Last KYC Form Sent On</label>
    <type>DateTime</type>
</CustomField>