force-app/main/default/objects/Contact/fields/Last_KYC_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_KYC_Form_URL__c</fullName>
    <label>Last KYC Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>