force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiator</fullName>
            </value>
            <value>
                <fullName>Decision-maker</fullName>
            </value>
            <value>
                <fullName>Contract Signatory</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>End-user</fullName>
            </value>
            <value>
                <fullName>Primary Billing Contact</fullName>
            </value>
            <value>
                <fullName>Additional Billing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>